Correct the swagger definition
